infrastructure/pterodactyl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pterodactyl-redis
  labels:
    app: pterodactyl
    component: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pterodactyl
      component: redis
  template:
    metadata:
      labels:
        app: pterodactyl
        component: redis
    spec:
      containers:
        - name: redis
          image: mirror.gcr.io/redis:alpine@sha256:987c376c727652f99625c7d205a1cba3cb2c53b92b0b62aade2bd48ee1593232
          args: ["--save", "", "--appendonly", "no"]
          resources:
            requests:
              cpu: "0"
              memory: "0"
            limits:
              cpu: "200m"
              memory: "128Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pterodactyl-worker
  labels:
    app: pterodactyl
    component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pterodactyl
      component: worker
  template:
    metadata:
      labels:
        app: pterodactyl
        component: worker
    spec:
      securityContext:
        runAsUser: 500
        runAsGroup: 500
        fsGroup: 500
      containers:
        - name: worker
          image: mirror.gcr.io/ccarney16/pterodactyl-panel:v1.11.11@sha256:0fa94427829b77027d1658d75e272e02f810ded0ecaf85392758b47727fabd31
          command: ["p:worker"]
          volumeMounts:
            - name: conf-secret
              mountPath: /data/pterodactyl.conf
              subPath: pterodactyl.conf
            - name: logs
              mountPath: /var/www/html/storage/logs
            - name: app
              mountPath: /var/www/html/storage/app
            - name: cache
              mountPath: /var/www/html/storage/framework/cache
            - name: sessions
              mountPath: /var/www/html/storage/framework/sessions
            - name: views
              mountPath: /var/www/html/storage/framework/views
          resources:
            requests:
              cpu: "0"
              memory: "0"
            limits:
              cpu: "500m"
              memory: "256Mi"
      volumes:
        - name: conf-secret
          secret:
            secretName: conf-secret
        - name: logs
          emptyDir: 
            medium: Memory
        - name: cache
          emptyDir: {}
        - name: sessions
          emptyDir: {}
        - name: views
          emptyDir: {}
        - name: app
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pterodactyl-cron
  labels:
    app: pterodactyl
    component: cron
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pterodactyl
      component: cron
  template:
    metadata:
      labels:
        app: pterodactyl
        component: cron
    spec:
      containers:
        - name: cron
          image: mirror.gcr.io/ccarney16/pterodactyl-panel:v1.11.11@sha256:0fa94427829b77027d1658d75e272e02f810ded0ecaf85392758b47727fabd31
          command: ["p:cron"]
          volumeMounts:
            - name: conf-secret
              mountPath: /data/pterodactyl.conf
              subPath: pterodactyl.conf
            - name: cron-tmpfs-logs
              mountPath: /var/www/html/storage/logs
            - name: cache
              mountPath: /var/www/html/storage/framework/cache
            - name: sessions
              mountPath: /var/www/html/storage/framework/sessions
            - name: views
              mountPath: /var/www/html/storage/framework/views
          resources:
            requests:
              cpu: "0"
              memory: "0"
            limits:
              cpu: "500m"
              memory: "256Mi"
      volumes:
        - name: conf-secret
          secret:
            secretName: conf-secret
        - name: cron-tmpfs-logs
          emptyDir:
            medium: Memory
        - name: cache
          emptyDir: {}
        - name: sessions
          emptyDir: {}
        - name: views
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pterodactyl-panel
  labels:
    app: pterodactyl
    component: panel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pterodactyl
      component: panel
  template:
    metadata:
      labels:
        app: pterodactyl
        component: panel
    spec:
      hostAliases:
        - ip: "10.96.42.42"
          hostnames:
          - "saubian.tail5ec535.ts.net"
      containers:
        - name: panel
          image: mirror.gcr.io/ccarney16/pterodactyl-panel:v1.11.11@sha256:0fa94427829b77027d1658d75e272e02f810ded0ecaf85392758b47727fabd31
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-config
              mountPath: /entrypoint.d/20-tls-config.sh
              subPath: 20-tls-config.sh
            - name: conf-secret
              mountPath: /data/pterodactyl.conf
              subPath: pterodactyl.conf
          resources:
            requests:
              cpu: "0"
              memory: "0"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
      volumes:
        - name: nginx-config
          configMap:
            defaultMode: 0755
            name: pterodactyl-nginx-config
        - name: conf-secret
          secret:
            secretName: conf-secret
