infrastructure/pterodactyl/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pterodactyl
spec:
  parentRefs:
  - name: main
    namespace: envoy-system
    sectionName: https
  hostnames:
    - "panel.yewolf.fr"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: pterodactyl-panel
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
